crates/batuta-tui/tests/snapshots/logs_overlay__logs_errors_120x40.snap
---
source: crates/batuta-tui/tests/logs_overlay.rs
expression: "render(&model, 120, 40)"
---
"batuta · ws: workspace ▾ · daemon running · 0 attention                                                                 "
"wa┌logs · session sess-log · live────────────────────────────────────────────────────────────────────────────────────┐  "
"┌[│20:05:52  tool  ○  batuta  all good                                                                               │─┐"
"│n│20:05:52  tool  !  batuta  boom                                                                                   │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"└─│                                                                                                                  │ │"
"┌[│                                                                                                                  │ │"
"│n│                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"└─│                                                                                                                  │ │"
"┌[│                                                                                                                  │ │"
"│n│                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │ │"
"│ │                                                                                                                  │d│"
"└─└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘─┘"
"Esc close                                                                                                               "
