crates/batuta-tui/tests/snapshots/logs_overlay__logs_session_100x30.snap
---
source: crates/batuta-tui/tests/logs_overlay.rs
expression: "render(&model, 100, 30)"
---
"batuta · ws: workspace ▾ · daemon running · 0 attention                                             "
"wa┌logs · session sess-log · live────────────────────────────────────────────────────────────────┐  "
"┌[│20:05:52  tool  ○  batuta  started                                                            │─┐"
"│n│                                                                                              │ │"
"│ │                                                                                              │ │"
"│ │                                                                                              │ │"
"│ │                                                                                              │ │"
"│ │                                                                                              │ │"
"│ │                                                                                              │ │"
"│ │                                                                                              │ │"
"│ │                                                                                              │ │"
"│ │                                                                                              │ │"
"└─│                                                                                              │ │"
"┌[│                                                                                              │ │"
"│n│                                                                                              │ │"
"│ │                                                                                              │ │"
"│ │                                                                                              │ │"
"│ │                                                                                              │ │"
"│ │                                                                                              │ │"
"│ │                                                                                              │ │"
"└─│                                                                                              │ │"
"┌[│                                                                                              │ │"
"│n│                                                                                              │ │"
"│ │                                                                                              │ │"
"│ │                                                                                              │ │"
"│ │                                                                                              │ │"
"│ │                                                                                              │ │"
"│ │                                                                                              │d│"
"└─└──────────────────────────────────────────────────────────────────────────────────────────────┘─┘"
"Esc close                                                                                           "
